	* Removed ManagedWebSessionContext. Any configuration files which use the "managed_web" session context should now use "web"
        * SybaseASADialect removed: Use SybaseSQLAnywhere10Dialect instead.
        * ASA10ClientDriver, ASAClientDriver and SQLiteDriver removed: Use SybaseSQLAnywhereDriver, SybaseAsaClientDriver, SQLite20Driver instead.
        * Removed Classic HQL Parser.

Build 3.3.2.GA
=============================

** Bug
    * [NH-2463] - Exception in LINQ projection with redundant type cast - block using WCF Data Services projection's
    * [NH-2688] - SelectMany with cast throws QuerySyntaxException
    * [NH-2898] - Retrieving object from 2nd cache with lazy property fails
    * [NH-3050] - Contributed patch as solution to Unable to cast object of type 'NHibernate.Impl.ExpandedQueryExpression' to type 'NHibernate.Linq.NhLinqExpression' at NHibernate.Linq.NhQueryProvider.PrepareQuery
    * [NH-3123] - Nuget package should contain the NHibernate logo
    * [NH-3217] - OrderBy with a parameter then Skip and Take produces sql error
    * [NH-3239] - Linq to NHibernate and Dynamic LINQ - query caching not working
    * [NH-3271] - Threading problem in TypeFactory

** Improvement
    * [NH-3296] - Tweak build system to allow keeping a constant assembly version between compatible releases
    * [NH-3297] - NHibernate 3.x NuGet package should forbid Iesi.Collections 4.0 or higher

** Patch
    * [NH-3293] - SimpleExpression.ToString() returns hashes for strings and dates

Build 3.3.1.GA
=============================

** Sub-task
    * [NH-3167] - Support for Microsoft Sql Server 2012 sequences
    * [NH-3170] - Add native "iif" function to MsSql2012Dialect

** Bug
    * [NH-2789] - LINQ query on byte? simple property fails on MSSQL 2005 (tinyint)
    * [NH-2812] - Performing a Linq query on a non-null byte property throws an InvalidCastException
    * [NH-3121] - Silent truncation of binary data